part1/log output2/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  files
  template:
    metadata:
      labels:
        app:  files
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: storage-claim
      containers:
        - name: log-generator
          image: younes0204/log-generator
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: shared-file
              mountPath: /usr/share
        - name: log-reader
          image: younes0204/log-reader
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: shared-file
              mountPath: /usr/share
