part1/log output2/manifests/podfordebuging.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: log-output-ns
  name: my-busybox
  labels:
    app: my-busybox
spec:
  containers:
  - image:  busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
