part1/log output2/manifests/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: log-output-ns
  name: postgres-svc
  labels:
    app: postgresapp
spec:
  ports:
    - port: 5432
      name: db
  clusterIP: None
  selector:
    app: postgresapp
