part1/log output2/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: log-output-ns
  name: log-output-ing
spec:
  rules:
    - http:
        paths:
          - path: /log_Generator
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 8081

          - path: /log_reader
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 8082
